--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,7 +133,7 @@ add_subdirectory("${PROJECT_SOURCE_DIR}/example")
 
 
 # if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
-add_subdirectory(test)
+#add_subdirectory(test)
 # endif()
 
 
